Добавляет предзагрузку шрифтов. Правит заголовок

--- a/source/index.html
+++ b/source/index.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Калькулятор ремонта" />
-  <title>Калькулятор ремонта</title>
+  <meta name="description" content="hmarket-spb-test"/>
+  <title>hmarket-spb-test</title>
   <link rel="stylesheet" href="css/style.min.css">
-
+  <link rel="preload" href="fonts/roboto-bold.woff2" as="font" crossorigin>
+  <link rel="preload" href="fonts/roboto-medium.woff2" as="font" crossorigin>
+  <link rel="preload" href="fonts/roboto-regular.woff2" as="font" crossorigin>
 </head>
 
 <body class="page-body">
